Fix username and display name being hidden on narrow screens in moderation interface (#33064)

--- a/app/javascript/styles/mastodon/widgets.scss
+++ b/app/javascript/styles/mastodon/widgets.scss
@@ -82,9 +82,9 @@
 
 .accounts-table {
   width: 100%;
-  table-layout: fixed;
 
   .account {
+    max-width: calc(56px + 30ch);
     padding: 0;
     border: 0;
   }
